cf_analysis_results/checkerframework_results/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8.txt
../../../../datasets/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:44: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-105 $$ com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedOutputStream $$ possible exceptional exit due to throw new IllegalStateException(e); with exception type java.lang.IllegalStateException $$ ( 1945, 2035 ) $$ @MustCall method close may not have been invoked on temp-var-105 or any of its aliases.
				new UnsafeBasedOutputStream(
				^
  The type of object is: com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedOutputStream.
  Reason for going out of scope: possible exceptional exit due to throw new IllegalStateException(e); with exception type java.lang.IllegalStateException
../../../../datasets/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:48: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-106 $$ java.io.ObjectOutputStream $$ possible exceptional exit due to new ObjectInputStream(unsafeBasedInputStream) with exception type java.io.IOException $$ ( 2046, 2093 ) $$ @MustCall method close may not have been invoked on temp-var-106 or any of its aliases.
			oos = new ObjectOutputStream(unsafeBasedOutputStream);
			      ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(unsafeBasedInputStream) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:50: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-107 $$ com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedInputStream $$ possible exceptional exit due to new ObjectInputStream(unsafeBasedInputStream) with exception type java.io.IOException $$ ( 2128, 2217 ) $$ @MustCall method close may not have been invoked on temp-var-107 or any of its aliases.
				new UnsafeBasedInputStream(
				^
  The type of object is: com.zeroturnaround.rebellabs.oceanofmemories.article2.benchmark.serde.SerializationDeserializationBasedOffHeapBenchmarkWorker.UnsafeBasedInputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(unsafeBasedInputStream) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/serde/SerializationDeserializationBasedOffHeapBenchmarkWorker.java:54: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-108 $$ java.io.ObjectInputStream $$ regular method exit $$ ( 2228, 2273 ) $$ @MustCall method close may not have been invoked on temp-var-108 or any of its aliases.
			ois = new ObjectInputStream(unsafeBasedInputStream);
			      ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/article2/benchmark/memorymappedfile/MemoryMappedFileBasedOffHeapBenchmarkWorker.java:26: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-148 $$ java.io.RandomAccessFile $$ possible exceptional exit due to fc.map(FileChannel.MapMode.READ_WRITE, 0, size) with exception type java.io.IOException $$ ( 780, 851 ) $$ @MustCall method close may not have been invoked on temp-var-148 or any of its aliases.
				new RandomAccessFile(
				^
  The type of object is: java.io.RandomAccessFile.
  Reason for going out of scope: possible exceptional exit due to fc.map(FileChannel.MapMode.READ_WRITE, 0, size) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/common/util/Util.java:66: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-327 $$ java.io.InputStream $$ possible exceptional exit due to outputReader.readLine() with exception type java.io.IOException $$ ( 1899, 1920 ) $$ @MustCall method close may not have been invoked on temp-var-327 or any of its aliases.
			BufferedReader outputReader = new BufferedReader(new InputStreamReader(proc.getInputStream()));
			                                                                                          ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to outputReader.readLine() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url27a7ae3508_serkan_ozal_ocean_of_memories_tgz-pJ8-com_zeroturnaround_rebellabs_oceanofmemories_article1_objectlayout_ObjectMemoryLayoutDemoJ8/src/com/zeroturnaround/rebellabs/oceanofmemories/common/util/Util.java:67: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-330 $$ java.io.InputStream $$ possible exceptional exit due to outputReader.readLine() with exception type java.io.IOException $$ ( 2003, 2024 ) $$ @MustCall method close may not have been invoked on temp-var-330 or any of its aliases.
	        BufferedReader errorReader = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
	                                                                                                 ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to outputReader.readLine() with exception type java.io.IOException
warning: (annotation.not.completed) $$ 2 $$ com.google.common.collect $$ @ParametersAreNonnullByDefault $$  $$ Element com.google.common.collect contains annotation @ParametersAreNonnullByDefault which can't be found. Make sure your classpath is set correctly.
7 errors
1 warning
